[package]
name = "cch23-smiles"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies] 
shuttle-axum = "0.34.0"
shuttle-runtime = "0.34.0"
tokio = "1.0"
tracing = "0.1" 
tower-http = { version = "0.5", features = ["fs","trace"] }
axum = { version = "0.7", features = ["tokio", "http2"] } 
html2md = "0.2"
reqwest = { version="0.11", features = ["json","blocking"] }
serde = "1.0.193"


[lints.clippy]
pedantic = { level = "warn" }
cargo = { level = "warn" }
